--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-model.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-model.html
@@ -317,7 +317,8 @@
     </li>
     {{#group_users}}
       <li>
-        <a href="javascript:void(0);" data-field="assignee" data-name="{{name}}" data-group-name="{{../group_name}}" data-group-id="{{../id}}" value="{{id}}" class="text-ellipsis width-9em">
+        <!-- <a href="javascript:void(0);" data-field="assignee" data-name="{{name}}" data-group-name="{{../group_name}}" data-group-id="{{../id}}" value="{{id}}" class="text-ellipsis width-9em"> -->
+        <a href="javascript:void(0);" data-field="assignee" data-name="{{name}}" data-group-name="{{../group_name}}" data-group-id="{{../id}}" value="{{id}}" class="text-ellipses-new-open-tickets">
           {{name}}
         </a>
       </li>
