--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
@@ -178,10 +178,12 @@
 
                 <input name="signature" type="hidden" value="{{#getCurrentUserPrefs}}{{signature}}{{/getCurrentUserPrefs}}"/>
                 <div class="line ling-lg b-b"></div>
-                <div class="form-actions pull-right {{#isNewTheme}}col-md-offset-7 col-md-5 m-r-md{{else}}col-md-offset-8 col-md-4 m-r-n-lg{{/isNewTheme}}">
+                <div class="form-actions  {{#isNewTheme}}col-md-offset-2 col-md-8 p-r-none{{else}}col-md-offset-8 col-md-4 m-r-n-lg pull-right{{/isNewTheme}}">
+                <div class="{{#isNewTheme}}pull-right{{/isNewTheme}}">
                     <a href="#contacts" class="btn btn-sm  btn-default btn-default-imp  m-t-lg-imp {{#isNewTheme}} m-r-sm {{/isNewTheme}}" id="send-email-close">{{agile_lng_translate 'other' 'cancel'}}</a>
                     <a href="#"  id="sendEmail" class="btn btn-sm btn-primary m-t-lg-imp  ">{{agile_lng_translate 'tasks' 'Send'}}</a>
                     &nbsp;&nbsp;<span id="msg"></span>  
+                </div>
                 </div>
             </fieldset>
         </form>
