send email button alignments

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-articles-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-articles-collection.html
@@ -58,9 +58,9 @@
                             </th>
                             <th class="ticket-new-theme-article {{#isNewTheme}} {{else}}hide{{/isNewTheme}}">
                                 <div class="pull-right add-btn-mobile ticket-new-theme-article-btn">
-                                    <a href="#knowledgebase/add-article{{#helpcenter_url_section}}{{/helpcenter_url_section}}" class="btn btn-xs btn-default btn-addon btn-mlg-imp ticket-new-theme-article-add-btn">
+                                    <button href="#knowledgebase/add-article{{#helpcenter_url_section}}{{/helpcenter_url_section}}" class="btn btn-xs btn-default btn-addon btn-mlg-imp ticket-new-theme-article-add-btn">
                                         <span><i class="icon-plus-sign"></i></span> {{agile_lng_translate 'Help-center' 'add-article'}}
-                                    </a>
+                                    </button>
                                 </div>
                             </th>
                         </tr>
