buttons class added

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-collection.html
@@ -76,12 +76,12 @@
                                 {{#isNewTheme}}
                                 <th style="width:28%" class="category-buttons-left">
                                 <div class="inline-block m-r-sm">
-                                    <button href="#selectlandingpage"  class="btn select-landing-page-button btn-sm btn-default btn-mlg-imp btn-addon access_kb">
+                                    <button href="#selectlandingpage"  class="btn select-landing-page-button btn-sm btn-default btn-mlg-sm-imp btn-addon access_kb">
                                         {{agile_lng_translate 'preferences' 'settings'}}
                                     </button>
                                 </div> 
                                 <div class="inline-block" style="">
-                                    <button href="#knowledgebase/add-category" class="btn btn-sm btn-default btn-addon btn-mlg-imp select-landing-page-button">
+                                    <button href="#knowledgebase/add-category" class="btn btn-sm btn-default btn-addon btn-mlg-sm-imp btn-mlg-imp select-landing-page-button">
                                         <span><i class="icon-plus-sign"></i></span> {{agile_lng_translate 'admin-settings-tasks' 'add-category'}}
                                     </button>
                                 </div>
