--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-helpcenter-sections-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-helpcenter-sections-collection.html
@@ -60,7 +60,7 @@
                             <th class="new-theme-table-heading">
                             {{#isNewTheme}}
                                 <div class="pull-right" style="margin-top:-4px;">
-                                    <button href="#knowledgebase/add-section{{#helpcenter_url}}{{/helpcenter_url}}" class="btn btn-sm btn-default btn-addon add-section-new-theme btn-mlg-imp">
+                                    <button href="#knowledgebase/add-section{{#helpcenter_url}}{{/helpcenter_url}}" class="btn btn-sm btn-default btn-addon add-section-new-theme btn-mlg-sm-imp">
                                         <span><i class="icon-plus-sign"></i></span>  {{agile_lng_translate 'tickets' 'add-section'}}
                                     </button>
                                 </div>
