added the spacing for the categories list item

--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
@@ -166,7 +166,7 @@
                             </label>
                         </div>
 
-                        <div class="pull-left col-sm-6 p-r-none">
+                        <div class="pull-left col-sm-6 p-r-none{{#is_mobile}} p-l-md{{/is_mobile}}">
                             <select name="push_param" class="form-control">
                                 <option value="YES">{{agile_lng_translate 'portlets' 'yes'}}</option>
                                 <option value="YES_AND_PUSH_EMAIL_ONLY"> {{agile_lng_translate 'prefs-email' 'yes-and-push-email-only'}}</option>
