--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-model.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-model.html
@@ -28,7 +28,7 @@
 	<td>
 	</td>
     <td data-id="{{id}}" class="">
-	    <div class="{{#isNewTheme}}pull-right{{/isNewTheme}}">
+	    <div class="{{#isNewTheme}}text-center p-l-xxl{{/isNewTheme}}">
 	  		<a title= "{{agile_lng_translate 'contact-details' 'edit'}}" style="padding-left:10px;padding-right:5px;" href="#knowledgebase/{{id}}/edit-category"> <small class="text-muted m-b-sm"><i class="fa fa-pencil-square-o"></i></small></a>
 	  		<a  data-id="{{id}}" class="deal-source-move text-l-none-hover c-p text-sm m-l-sm hover-show">
 				<small class="text-muted m-b-sm"><i data-id="{{id}}" title="{{agile_lng_translate 'admin-settings-deals' 'drag-source'}}" class="icon-move"></i></small>
