--- a/agile-frontend/WebContent/flatfull/tpl/new-activity-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/new-activity-modal.html
@@ -111,6 +111,28 @@
                         </div>
                     </div>
                     <div class="control-group form-group">
+                    <div id="event-color-checkbox">
+                    <div><label class="control-label col-sm-3"    style="top: -10px;">{{agile_lng_translate 'tasks' 'event-color'}}</label>
+                    <input type="hidden" name="backgroundColor" id="backgroundColor"/></div>
+                    <div id="checkboxes-div">
+
+                          <div class="bcp-select" id="#5484ed" style="background-color: #5484ed;"><div class=""></div></div> 
+                          <div class="bcp-select" id="#4bdfc" style="background-color: #a4bdfc;"><div class=""></div></div>
+                          <div class="bcp-select" id="#46d6db" style="background-color: #46d6db;"><div class=""></div></div>
+                          <div class="bcp-select" id="#7ae7bf" style="background-color: #7ae7bf;"><div class=""></div></div>
+                          <div class="bcp-select" id="#51b749" style="background-color: #51b749;"><div class=""></div></div>
+                          <div class="bcp-select" id="#fbd75b" style="background-color: #fbd75b;"><div class=""></div></div>
+                          <div class="bcp-select" id="#ffb878" style="background-color: #ffb878;"><div class=""></div></div>
+                          <div class="bcp-select" id="#ff887c" style="background-color: #ff887c;"><div class=""></div></div>
+                          <div class="bcp-select" id="#dc2127" style="background-color: #dc2127;"><div class=""></div></div>
+                          <div class="bcp-select" id="#dbadff" style="background-color: #dbadff;"><div class=""></div></div>
+                          <div class="bcp-select" id="#e1e1e1" style="background-color: #e1e1e1;"><div class=""></div></div>
+                        </div>
+
+                    </div>
+
+                    </div>
+                    <div class="control-group form-group">
                         <!-- <label class="control-label"><a href="#" id="new-event-related-contacts-label"><i class="icon-plus"></i> Add Contacts</a></label> -->
 
                         <label class="control-label new-event-related-contacts-label col-sm-3">{{agile_lng_translate 'deal-view' 'related-to'}}</label>
