--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
@@ -35,13 +35,17 @@
                         </p>
                      </div>
                      <!-- /.editContent -->
-                     <div>
+                     <div class="row">
+                       <div class="col-sm-5">
                         <a href="#" style="border: none; text-decoration: none" class="propClone app-store">
-                        <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/app-store-button.png" width="192" height="60">
+                           <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/app-store-button.png" width="192" height="60">
                         </a>
-                        <a href="#" style="border: none; text-decoration: none" class=" propClone play-store margin-left-15">
-                        <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/gplay-button.png" width="192" height="60">
+                       </div>
+                       <div class="col-sm-5">
+                        <a href="#" style="border: none; text-decoration: none" class=" propClone play-store">
+                           <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/gplay-button.png" width="192" height="60">
                         </a>
+                       </div>
                      </div>
                   </div>
                                   
