updated to store adress from linkedin

--- a/agile-frontend/WebContent/flatfull/tpl/widget/linkedin/linkedin-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/linkedin/linkedin-profile.html
@@ -321,7 +321,7 @@
 </script>
 
 <script id="linkedin-login-template" type="text/html">
-<div class='widget_content' style='border-bottom:none;line-height: 160%;' >
+<div class="m-t-sm">
 	{{agile_lng_translate 'widjets' 'build-professional-relationship-with-contacts'}}
 	<div class="m-t-md  m-b-xs text-center">
 		{{#if id}}	
