--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -919,7 +919,8 @@ var _Agile_Resources_Json = {
             "see-less" : "{{agile_lng_translate 'widgets' 'see-less'}}",
             "see-more" : "{{agile_lng_translate 'widgets' 'see-more'}}",
             "linkedin-browser-info" : "{{agile_lng_translate 'widgets' 'linkedin-browser-info'}}",
-            "install-plugin" : "{{agile_lng_translate 'widgets' 'install-plugin'}}"
+            "install-plugin" : "{{agile_lng_translate 'widgets' 'install-plugin'}}",
+            "Linkedin-content" : "{{agile_lng_translate 'widjets' 'build-professional-relationship-with-contacts'}}"
       },
         "social" : {
             "Sent" : "{{agile_lng_translate 'social' 'Sent'}}",
