--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <div id="page" class="page">
-         <header class="item header padding-top-50" id="newtemp1">
+         <header class="item header padding-top-50 newtemp1" id="newtemp1">
             <div class="wrapper">
                <div class="container">
                   <div class="row">
