provided message after linkedin sync

--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -920,7 +920,8 @@ var _Agile_Resources_Json = {
             "see-more" : "{{agile_lng_translate 'widgets' 'see-more'}}",
             "linkedin-browser-info" : "{{agile_lng_translate 'widgets' 'linkedin-browser-info'}}",
             "install-plugin" : "{{agile_lng_translate 'widgets' 'install-plugin'}}",
-            "Linkedin-content" : "{{agile_lng_translate 'widjets' 'build-professional-relationship-with-contacts'}}"
+            "Linkedin-content" : "{{agile_lng_translate 'widjets' 'build-professional-relationship-with-contacts'}}",
+            "linkedin-data-sync-success" : "{{agile_lng_translate 'widgets' 'linkedin-data-sync-success'}}"
       },
         "social" : {
             "Sent" : "{{agile_lng_translate 'social' 'Sent'}}",
