block responsive issue

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="page" class="page">
-            <header class="item header newtemp3 " id="newtemp13">
+            <header class="item  newtemp3 " id="newtemp13">
                 <div class="container">
                     <div class="row">
                        
