--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="page" class="page">
-            <header class="item header newtemp3" id="newtemp3">
+            <header class="item  newtemp3" id="newtemp3">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
