css changes in setting.html file

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings.html
@@ -1,6 +1,6 @@
  <script id="settings-template" type="text/html"> 
 <div class="">
-<div class="bg-light lter b-b wrapper-md">
+<div class="bg-light lter b-b wrapper-md agile-page-header">
 {{#is_mobile}}
 	<h3 class="m-b-xs font-thin h3 prefs-title">{{agile_lng_translate 'menu' 'preferences'}} <small></small></h3>
 <div id="add-new" class="text-center hide">
@@ -20,7 +20,7 @@
     <!-- <div class="app-content-full  h-full enable-full-height"> -->  
     <div>
 	<div class="hbox hbox-auto-xs hbox-auto-sm bg-light {{#is_mobile}} prefs-mobile-view {{/is_mobile}}">
-	<div class="col w b-r">
+	<div class="col w b-r tabs-left-panel agile-pos-t-xs">
    <div class="vbox {{#is_mobile}} text-center min-h-auto inline-block h-auto{{/is_mobile}}">
           <div class="row-row {{#is_mobile}} prefs-view {{/is_mobile}}">
 	<div id="PrefsTab" class="list-group list-group-lg no-radius no-border no-bg m-b-none {{#is_mobile}} bg-white w-full p-l {{/is_mobile}}">
@@ -53,7 +53,7 @@
 		</div>
 		</div>
 		</div>
-		<div class="tab-content wrapper-md">
+		<div class="tab-content wrapper-md agile-p-t-xs">
 			<div class="tabs" id="prefs-tabs-content"></div>
 		</div>
 		
