changes in new block

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header3.html
@@ -16,7 +16,7 @@
    <body>
       <div id="page" class="page" >
          <div  id="header3" class="wrapper image">
-            <header class=" backgrnd  bg1" style="padding-top:60px; padding-bottom:60px;">
+            <header class=" backgrnd  bg1" style="padding-top:60px; padding-bottom:60px;     background-image: url('https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/header3img1.png'); ">
                <div class="container">
                   <div class="row">
                      <div class="col-md-7">
@@ -28,8 +28,8 @@
                               Proin ullamcorper non neque nec lacinia. Praesent sodales libero accumsan pulvinar tempus. Proin nec lacus enim. Vivamus ullamcorper iaculis arcu et semper. Nulla venenatis nibh sed ligula placerat bibendum. Suspendisse malesuada enim eget elit congue rutrum.
                            </p>
                         </div>
-                        <a href="#" class="btn btn-default btn-lg btn-wide"><span class="fa fa-info"></span> Learn more</a>
-                        <a href="#" class="btn btn-primary btn-lg btn-wide second-btn" ><span class="fa fa-sign-in"></span> Sign up</a>
+                        <a href="#" class="btn btn-default btn-lg btn-wide" style="background-color: rgb(12, 78, 92);"><span class="fa fa-info"></span> Learn more</a>
+                        <a href="#" class="btn btn-primary btn-lg btn-wide second-btn" style="background-color: rgb(210, 158, 103);"><span class="fa fa-shopping-cart"></span> Sign up</a>
                      </div>
                   </div>
                   <!-- /.row -->
