--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header4.html
@@ -16,7 +16,7 @@
    <body>
       <div id="page" class="page">
          <div id="header4" class="wrapper image">
-            <header class="  backgrnd bg2" style="padding-top:60px; padding-bottom:60px;">
+            <header class="  backgrnd bg2" style="padding-top:60px; padding-bottom:60px; background-image: url('https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/header4img1.png'); ">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12  text-center">
@@ -29,8 +29,8 @@
                            </h3>
                         </div>
                         <br>
-                        <a href="#" class="btn btn-default btn-hg btn-wide"><span class="fa fa-info"></span> Learn more</a>
-                        <a href="#" class="btn btn-primary btn-hg btn-wide"><span class="fa fa-sign-in"></span> Sign up</a>
+                        <a href="#" class="btn btn-default btn-hg btn-wide" style="background-color: rgb(136, 214, 102);"><span class="fa fa-info"></span> Learn more</a>
+                        <a href="#" class="btn btn-primary btn-hg btn-wide" style="background-color: rgb(242, 188, 23);"><span class="fa fa-shopping-cart"></span> Sign up</a>
                      </div>
                   </div>
                   <!-- /.row -->
