--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
@@ -11,18 +11,18 @@
    </head>
    <body>
       <div id="page" class="page">
-         <header class="item header padding-top-50 newtemp1" id="newtemp12">
+         <header class="item header padding-top-50 newtemp1" id="newtemp12" style="background-color: white;">
             <div class="wrapper">
                <div class="container">
                   <div class="row">
                      <div class="col-sm-6 col-lg-6">
                         <div class="col-image-holder">
-                           <img style="height:370px;" alt="" class="img-responsive"  ="img" height="800" src=" https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="">
+                           <img style="height:370px;" alt="" class="img-responsive"  ="img" height="800" src=" https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp12img1.png" width="">
                         </div>
                      </div>
                      <div class="col-md-6 col-sm-6">
                         <div class="logo">
-                           <span class="fa fa-compass" style="font-size: 4em;"></span>
+                           <span class="fa fa-newspaper-o" style="font-size: 4em;"></span>
                         </div>
                         <div class="intro">
                            <div class="editContent">
@@ -32,8 +32,8 @@
                               "><p>Explore how your products can be a champion. Includes multiple colors and variations. Available exclusively on WrapBootstrap marketplace.</p>
                            </div>
                            <div class="buttons">
-                              <a href="#" class="btn btn-embossed btn-primary"><span class="fa fa-download icon"></span>Download</a>
-                              <a href="#" class="btn btn-link btn-lg"><span class="fa fa-arrow-circle-o-right"></span>Learn more</a>
+                              <a href="#" class="btn btn-embossed btn-primary" style="background-color: rgb(118, 165, 175);"><span class="fa fa-credit-card icon"></span>Upgrade Now</a>
+                              <a href="#" class="btn btn-link btn-lg" style="color: rgb(241, 194, 50);"><span class="fa fa-wechat" style="color: rgb(241, 194, 50);"></span>Need Help</a>
                            </div>
                         </div>
                      </div>
