--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="page" class="page">
-            <header class="item  newtemp3 " id="newtemp13">
+            <header class="item  newtemp3 " id="newtemp13" style="background-color: #fff;">
                 <div class="container">
                     <div class="row">
                        
@@ -25,15 +25,15 @@
                                 <div class="editContent lead">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo.</p>
                                 </div>
-                                <a href="#" class="btn btn-4 btn-lg btn-wide">
-                                    <span class="fa fa-cloud-download "> </span>
-                                    Cloud Download
+                                <a href="#" class="btn btn-4 btn-lg btn-wide" style="background-color: rgb(92, 162, 232);">
+                                    <span class="fa fa-barcode "> </span>
+                                    Rules Vs. Actions
                                 </a>
                             </div>
                         </div>
                          <div class="col-md-6 col-sm-6">
                             <div class="iphone-2">
-                                <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp2img.png" alt="">
+                                <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp13img1.png" alt="">
                             </div>
                         </div>
                     </div>
