--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp14.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp14.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
+<html lang="en"><head>
       <meta charset="utf-8">
       <title>Header</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/elements.min.css" rel="stylesheet">
       <link href="http://localhost:8888/misc/pagebuilder/source/elements/css/newtemplate.css" rel="stylesheet">
       <link rel="shortcut icon" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico">
-      <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
-      <!--[if lt IE 9]>
-      <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/html5shiv.js"></script>
-      <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/respond.min.js"></script>
-      <![endif]-->
+     
    </head>
    <body>
       <div id="page" class="page">
@@ -26,44 +21,44 @@
                   <div class="col-md-6">
                      <div class="faqs-div">
                         <div class="editContent">
-                           <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">How can I estimate my MTUs?</h5>
+                           <h5 style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">HOW DOES AGILE COMPARE TO ITS COMPETITION?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
-                           <p>To get an idea of your MTU count, calculate your monthly active users, then add your anonymous visitor count per month.</p>
-                        </div>
-                     </div>
-                     <div class="faqs-div">
-                        <div class="editContent">
-                           <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Is there a free trial of the paid plans?</h5>
-                        </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
-                           <p>Yes! There is a 14 day free trial for the Team and Business plans.</p>
+                        <div class=" editContent " style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
+                           <p>Agile offers a full, comprehensive suite of sales and marketing automation to keep your communication effective. None of our competitors offer a fully integrated suite like Agile and they are at least 5x more expensive.</p>
                         </div>
                      </div>
                      <div class="faqs-div">
                         <div class="editContent">
-                           <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Does my bill change every month?</h5>
+                           <h5 style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">CAN I CHANGE PLANS OR CANCEL ANYTIME?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
-                           <p>Your monthly cost is based on MTUs, which may fluctuate each month based on your user activity. If you'd like to have a standard monthly or annual contract, the Business plan is right for you.</p>
+                        <div class=" editContent " style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
+                           <p>You can upgrade, downgrade or cancel anytime automatically from the online dashboard.</p>
+                        </div>
+                     </div>
+                     <div class="faqs-div">
+                        <div class="editContent">
+                           <h5 style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">HOW TO ADD MORE EMAILS TO MY ACCOUNT?</h5>
+                        </div>
+                        <div class=" editContent " style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
+                           <p>You can add more emails to your Agile CRM account by buying an email add-on package. The emails from the add-on package last for one month from the time of your purchase.</p>
                         </div>
                      </div>
                   </div>
                   <div class="col-md-6">
                      <div class="faqs-div">
                         <div class="editContent">
-                           <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Do I need to have a data warehouse to use Warehouses?</h5>
+                           <h5 style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">HOW SECURE IS MY DATA IN AGILE?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
-                           <p>Yes! Segment connects to your existing data warehouse and pipes in data collected from your sources. You don't have to worry about the ETL or maintaining the data pipeline. </p>
+                        <div class=" editContent " style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
+                           <p>This allows your data to remain private and separate from other customers' databases. You will not share a database with other customers as is often the case with other CRM companies.</p>
                         </div>
                      </div>
                      <div class="faqs-div">
                         <div class="editContent">
-                           <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Does Segment handle the billing for these other services?</h5>
+                           <h5 style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">WHAT IS THE UPTIME GUARANTEE?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
-                           <p>Not right now. You'll still have to pay for your accounts that you register with our Integrations and Warehouses partners.</p>
+                        <div class=" editContent " style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
+                           <p>Agile CRM offers a 99.5% uptime guarantee on all paid plans. We are hosted on Google and Amazon cloud for scale.</p>
                         </div>
                      </div>
                   </div>
@@ -76,5 +71,5 @@
          <!-- /.item -->
       </div>
       <!-- /#page -->
-   </body>
-</html>
+   
+</body></html>
