--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="iphone-2">
-                                <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp2img.png" alt="">
+                                <img class="img-responsive" src="http://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp3img1.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
@@ -29,9 +29,9 @@
                                 <div class="editContent lead"><p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo.</p>
                                 </div>
-                                <a href="#" class="btn btn-4 btn-lg btn-wide">
-                                    <span class="fa fa-cloud-download "> </span>
-                                    Cloud Download
+                                <a href="#" class="btn btn-4 btn-lg btn-wide" style="border-radius: 1px;">
+                                    <span class="fa fa-coffee "> </span>
+                                     Page Leads
                                 </a>
                             </div>
                         </div>
