--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
@@ -5,36 +5,41 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/elements.min.css" rel="stylesheet">
       <link href="http://localhost:8888/misc/pagebuilder/source/elements/css/newtemplate.css" rel="stylesheet">
-      <link  href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico" rel="shortcut icon">
+      <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico" rel="shortcut icon">
       <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0">
       <link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1">
    </head>
    <body>
       <div id="page" class="page">
-         <header class="item header padding-top-50 newtemp1" id="newtemp1">
+         <header class="item header padding-top-50 newtemp1" id="newtemp1" >
             <div class="wrapper">
                <div class="container">
                   <div class="row">
                      <div class="col-md-6 col-sm-6">
                         <div class="logo">
-                           <span class="fa fa-compass" style="font-size: 4em;"></span>
+                           <span class="fa fa-shield" style="font-size: 4em;"></span>
                         </div>
                         <div class="intro">
                            <div class="editContent">
                               <h1>This is the perfect landing page for your apps.</h1>
                            </div>
                            <div class="editContent" style="margin: 0 0 15px;
-                              "><p>Explore how your products can be a champion. Includes multiple colors and variations. Available exclusively on WrapBootstrap marketplace.</p>
+                              ">
+                              <p>Explore how your products can be a champion. Includes multiple colors and variations. Available exclusively on WrapBootstrap marketplace.</p>
                            </div>
                            <div class="buttons">
-                              <a href="#" class="btn btn-embossed btn-primary"><span class="fa fa-download icon"></span>Download</a>
-                              <a href="#" class="btn btn-link btn-lg"><span class="fa fa-arrow-circle-o-right"></span>Learn more</a>
+                              <a href="#" class="btn btn-embossed btn-primary" style="
+                                 background-color: rgb(224, 102, 102);
+                                 "><span class="fa fa-bookmark-o icon"></span>Subscribe Now</a>
+                              <a href="#" class="btn btn-link btn-lg" style="color: rgb(68, 68, 68);
+                                 background-color: rgba(0, 0, 0, 0);
+                                 "><span class="fa fa-language"></span>Learn more</a>
                            </div>
                         </div>
                      </div>
                      <div class="col-sm-6 col-lg-6">
                         <div class="col-image-holder">
-                           <img style="height:370px;" alt="" class="img-responsive" height="800" src=" https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="">
+                           <img style="height:370px;" alt="" class="img-responsive" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp1img1.png" width="">
                         </div>
                      </div>
                   </div>
