updated to fix linkedin widget issues

--- a/agile-frontend/WebContent/flatfull/tpl/widget/widgets.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/widgets.html
@@ -27,7 +27,7 @@
 				{{/if}}
 				<span class="m-t-xs m-r-xs">
 					{{#if_equals name "Linkedin"}}
-						<a id="{{remove_spaces name}}_plugin_delete" rel="tooltip" title="{{agile_lng_translate 'widgets' 'reset-settings'}}">
+						<a href='#add-widget' id="{{remove_spaces name}}_plugin_delete" rel="tooltip" title="{{agile_lng_translate 'widgets' 'reset-settings'}}">
 							<i class="text-muted fa fa-wrench c-p"></i>
 						</a>
 					{{else}}
