--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-gmail-send.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-gmail-send.html
@@ -112,10 +112,8 @@
 			              <div class="control-group form-group">
 			            	<div class="checkbox">
 			                <label class="i-checks i-checks-sm">
-			                    <input type="checkbox" id="gmail-bulk-email-checked" name="bulk_email" title="Send bulk email" {{#if_equals bulk_email true}}checked{{/if_equals}}><i></i>Gmail Campaign emails
+			                    <input type="checkbox" id="gmail-bulk-email-checked" name="bulk_email" title="Send bulk email" {{#if_equals bulk_email true}}checked{{/if_equals}}><i></i>Send Campaign emails from Gmail SMTP
 			                </label>
-			                <span style=" color: grey;"> <img border="0" src="//doxhze3l6s7v9.cloudfront.net/beta/static//img/help.png" style="height: 8px;vertical-align: top; position: relative;left: -5px;" rel="popover" data-placement="right" data-title:"" data-content=" Your campaign and bulk email aso send through Gmail up to max limit if from email address is same." id="element" data-trigger="hover" "="" data-original-title="" title="">
-	               			</span>
 			         	   </div>
         				</div>
 					            
@@ -131,9 +129,17 @@
 	<div class="col-md-4 col-sm-6 col-xs-12 "></div>
 	<div class="col-md-4 col-sm-6 col-xs-12 ">
          <div style="margin-top:0px; text-align : justify;">
-               <h4>{{agile_lng_translate 'Admin-settings-api-analytics' 'email-dkim-settings'}}</h4>
-               <p>To get DKIM & SPF settings eg: <br>If from email address is <b>test@example.com</b> then your email domain is <b>example.com</b> Please enter your email domain <b>example.com</b> and click on <b>Get Settings</b>.</p>
-               <p> Copy obtained records and paste it in your DNS records. Once done click on <b>Verify</b>.</p>
+                <b>{{agile_lng_translate 'admin-settings-integrations' 'note'}}</b>
+                <br>
+                <p>
+                  Send personal and campaign emails from your email provider. 
+                </p>
+                 <p> <b>Per day limit:</b> Maximum number of emails to be sent from Agile to your email provider. Check with your email provider on sending limits for your account. Some email providers may only allow you to send a limited number of emails per day or per hour.
+                 </p>
+                <p>
+                <b>Send campaign emails from Gmail SMTP:</b> The campaign emails will be sent through the connected email provider. If the per day max limit is reached, then the emails will be sent from Agile’s default email gateway.
+                </p>
+                 <p>Bounces and Spam Complaints will not be shown on Agile Reports.</p>
          </div>
       </div>
       </div>
